# claude-pending-board

./: .gitignore  .mailmap  CLAUDE.md  Cargo.toml  INSTALL.md  README.md
.claude-plugin/: marketplace.json
.github/workflows/: auto-version-bump.yml  ci.yml  release.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: iterm2.rs  lib.rs  wezterm.rs
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: commands.rs  hud_show.rs  main.rs  plugin_install.rs  plugin_watch.rs  services.rs  state.rs  tray.rs  wsl_env_setup.rs
crates/app/ui/hud/: index.html  main.js  style.css
crates/app/ui/settings/: index.html  main.js  style.css
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  reaper.rs  terminal.rs  types.rs  visibility.rs
crates/core/src/board/: compaction.rs  mod.rs  parser.rs  store.rs  watcher.rs
crates/core/tests/: end_to_end.rs  no_hook_duplication.rs  plugin_version_sync.rs
docs/: release-checklist.md
docs/screenshots/: current-dismiss-preview.html
docs/superpowers/plans/: 2026-04-16-phase1-core-library.md  2026-04-16-phase2-adapters-hooks.md  2026-04-16-phase3-tauri-app.md  2026-04-17-phase4-plugin-docs-release.md
openspec/changes/add-claude-pending-board/: design.md  tasks.md
openspec/changes/add-claude-pending-board/specs/pending-board/: spec.md
openspec/changes/add-plugin-auto-sanitize/: tasks.md
openspec/changes/add-wsl-support/: design.md  proposal.md  tasks.md
openspec/changes/add-wsl-support/specs/pending-board/: spec.md
openspec/changes/archive/2026-04-30-add-plugin-auto-sanitize/: proposal.md
openspec/changes/archive/add-claude-pending-board/: proposal.md
openspec/specs/pending-board/: spec.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: pending-board.md
plugin/hooks/: pending_hook.ps1  pending_hook.sh
scripts/: README.md  pending_hook.ps1  pending_hook.sh  smoke-test-auto.ps1  smoke-test.ps1  smoke-test.sh
(+1 files in other folders)
