[package]
name = "claude-pending-board-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
claude-pending-board-core = { path = "../core" }
claude-pending-board-adapters = { path = "../adapters" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs-next = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
